--- a/css/styles.css
+++ b/css/styles.css
@@ -475,51 +475,60 @@ section {
   color: #fff;
   margin-bottom: 16px;
 }
+.footer-subscribe-text {
+  font-weight: 500;
+  font-size: 16px;
+
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
 .footer-icon-box {
   margin-right: 80px;
 }
 .footer-subscribe {
   display: flex;
-  align-items: flex-end;
-}
-.footer-subscribe-label {
-  display: flex;
-  flex-direction: column;
+  gap: 24px;
 }
 .footer-subscribe-input {
   border: 1px solid #fff;
   border-radius: 4px;
-  padding: 8px 16px;
+  padding-left: 16px;
   width: 264px;
   height: 40px;
-  background-color: #2e2f42;
-  margin-right: 24px;
-}
-.footer-subscribe-input,
-.footer-subscribe-input::placeholder {
-  font-weight: 400;
+  background-color: transparent;
+
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
   color: #fff;
-}
-.footer-subscribe-input:hover,
-.footer-subscribe-input:focus {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
+
 .footer-subscribe-button {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 4px;
   padding: 8px 24px;
-  max-width: 165px;
+  min-width: 165px;
   height: 40px;
   cursor: pointer;
 
-  gap: 16px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
   color: #fff;
+
+  border: none;
   background-color: #4d5ae5;
+}
+.footer-btn-svg {
+  margin-left: 16px;
 }
 .footer-subscribe-button svg {
   fill: #fff;
@@ -545,16 +554,18 @@ section {
 }
 .modal-overlay.is-open {
   opacity: 1;
+  visibility: visible;
   pointer-events: auto;
 }
 .modal {
   width: 408px;
+  min-height: 584px;
   padding: 72px 24px 24px 24px;
   border-radius: 4px;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
-
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
 }
 /*  Modal form */
@@ -571,87 +582,22 @@ section {
   height: 24px;
   background-color: #e7e9fc;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
 }
 .close-modal-btn:hover {
+  border: none;
   fill: #ffffff;
   background-color: #404bbf;
 }
-.pop-up-field {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  border: none;
-  position: relative;
-}
-.pop-up-field label {
-  text-align: left;
-  font-weight: 400;
-  font-size: 12px;
-
-  line-height: 1.16;
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-  margin-bottom: 4px;
-}
-.pop-up-case {
-  position: relative;
-  margin-bottom: 8px;
-}
-
-.pop-up-case input {
-  width: 100%;
-  outline: none;
-  padding: 11px 38px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 4px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  background: #fcfcfc;
-}
-.pop-up-case input:focus {
-  border-color: #4d5ae5;
-}
-.pop-up-svg {
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 5%;
-  transform: translateY(-50%);
-
-  fill: #2e2f42;
+.close-modal-btn-svg {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.pop-up-case input:focus + .pop-up-svg {
-  fill: #404bbf;
-}
-.pop-up-coment input:focus + .pop-up-svg {
-  fill: #404bbf;
-}
-.pop-up-coment textarea {
-  width: 100%;
-  height: 120px;
-  resize: none;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 4px;
-  outline: none;
-  padding: 8px 16px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.pop-up-coment textarea::placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  color: rgba(46, 47, 66, 0.4);
-}
-.pop-up-coment textarea:focus {
-  border-color: #4d5ae5;
-}
-.subscription-link {
-  text-decoration: underline;
-  color: #4d5ae5;
-  margin-left: 3px;
-}
 .pop-up-paragraph {
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
 
@@ -659,43 +605,128 @@ section {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+
   margin-bottom: 16px;
 }
-/* subscription-checkbox */
-.subscription-checkbox {
-  appearance: none;
+.pop-up-field {
+  margin-bottom: 8px;
 }
-.checkbox-border {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 16px;
-  height: 16px;
-  margin-right: 8px;
-  border-radius: 2px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  fill: transparent;
-}
-.subscription-checkbox:checked + .checkbox-border {
-  border: none;
-  fill: #fff;
-  background-color: #4d5ae5;
-}
-
-.subscription-form {
-  display: flex;
-  margin-bottom: 24px;
-  font-weight: 400;
+.pop-up-label {
+  display: block;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.04em;
   color: #8e8f99;
+  text-align: left;
+  margin-bottom: 4px;
+}
+
+.pop-up-case {
+  position: relative;
+  margin-bottom: 8px;
+}
+.pop-up-input {
+  width: 100%;
+  height: 40px;
+  outline: transparent;
+  padding-left: 38px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  background: transparent;
+}
+.pop-up-input:focus {
+  border-color: #4d5ae5;
+}
+.pop-up-svg {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.pop-up-input:focus + .pop-up-svg {
+  fill: #404bbf;
+}
+.pop-up-input:focus + .pop-up-svg {
+  fill: #404bbf;
+}
+.pop-up-coment-box {
+  margin-bottom: 16px;
+}
+.pop-up-coment {
+  width: 100%;
+  height: 120px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  padding: 8px 16px;
+
+  color: rgba(46, 47, 66, 0.4);
+  resize: none;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.pop-up-coment:focus {
+  border-color: #4d5ae5;
+}
+.subscription-link {
+  text-decoration: underline;
+  color: #4d5ae5;
+  margin-left: 3px;
+}
+
+/* subscription-checkbox */
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
+}
+
+.checkbox-border {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox:checked + .subscription-label .checkbox-border {
+  background-color: #4d5ae5;
+  border: none;
+  fill: #fff;
+}
+
+.subscription-form {
+  margin-bottom: 24px;
 }
 .subscription-label {
-  display: flex;
-  align-items: center;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
 }
-.subscription-text {
+.checkbox-svg {
+}
+/* .subscription-text {
   gap: 8px;
 
   font-weight: 400;
@@ -703,16 +734,25 @@ section {
   line-height: 1.16;
   letter-spacing: 0.04em;
   color: #8e8f99;
-}
+} */
 .button-form {
+  display: block;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+
+  cursor: pointer;
   border-radius: 4px;
   border: none;
-  padding: 16px 32px;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   background-color: #4d5ae5;
   color: #ffffff;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: 0 auto;
 }
 
 .button-form:hover,
