--- a/css/styles.css
+++ b/css/styles.css
@@ -550,7 +550,8 @@ section {
   pointer-events: none;
 
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-overlay.is-open {
   opacity: 1;
@@ -558,6 +559,8 @@ section {
   pointer-events: auto;
 }
 .modal {
+  top: 50%;
+  left: 50%;
   width: 408px;
   min-height: 584px;
   padding: 72px 24px 24px 24px;
@@ -566,7 +569,7 @@ section {
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  position: relative;
+  position: absolute;
 }
 /*  Modal form */
 
