--- a/css/styles.css
+++ b/css/styles.css
@@ -584,14 +584,16 @@ section {
   width: 24px;
   height: 24px;
   background-color: #e7e9fc;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0;
 }
-.close-modal-btn:hover {
+.close-modal-btn:hover,
+.close-modal-btn:focus {
   border: none;
   fill: #ffffff;
   background-color: #404bbf;
@@ -617,7 +619,7 @@ section {
 .pop-up-label {
   display: block;
   font-size: 12px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
   text-align: left;
@@ -651,10 +653,7 @@ section {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .pop-up-input:focus + .pop-up-svg {
-  fill: #404bbf;
-}
-.pop-up-input:focus + .pop-up-svg {
-  fill: #404bbf;
+  fill: #4d5ae5;
 }
 .pop-up-coment-box {
   margin-bottom: 16px;
@@ -672,6 +671,7 @@ section {
   resize: none;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
+  background-color: transparent;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -706,6 +706,7 @@ section {
   justify-content: center;
   width: 16px;
   height: 16px;
+  border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   fill: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -713,9 +714,9 @@ section {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .checkbox:checked + .subscription-label .checkbox-border {
-  background-color: #4d5ae5;
+  background-color: #404bbf;
   border: none;
-  fill: #fff;
+  fill: #f4f4fd;
 }
 
 .subscription-form {
