--- a/css/styles.css
+++ b/css/styles.css
@@ -567,6 +567,7 @@ section {
   border-radius: 4px;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  transform: translate(-50%, -50%);
   background: #fcfcfc;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: absolute;
@@ -728,17 +729,7 @@ section {
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
-.checkbox-svg {
-}
-/* .subscription-text {
-  gap: 8px;
 
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-} */
 .button-form {
   display: block;
   font-family: "Roboto", sans-serif;
